[Profiling] Add CO2 and costs calculator
Rebase onto main
Query stacktrace events aggregated by (host.id,stacktrace.id)
Add co2Factor, costFactor and count to StackTraces
Add co2Factor, costFactor and count to Flamegraph
Require field 'requested_duration' in stacktraces request
Implement a PoC calculation for co2 and costs
Rename co2/costs response fields
Use helper function for fetching single values from search response
ArrayList -> List
Remove hot debug logs
Load profiling costs from file
Update profiling-costs.json.gz
Use method references for StopWatch.report()
Do co2/cost in parallel to stacktrace metadata queries
Move CO2 calculations into a separate class
Move cost calculations into a separate class
Cleanups / address comments
Restore stack_trace_events array and fix tests

Co-authored-by: Daniel Mitterdorfer <daniel.mitterdorfer@elastic.co>